2001-11-20  Jim Blandy  <jimb@redhat.com>

	* target.h (TARGET_RANGE_PROFITABLE_FOR_HW_WATCHPOINT): Delete
	default definition; this is never used.

2001-11-20  Keith Seitz  <keiths@redhat.com>

	* varobj.c (c_value_of_child): Release memory for "name" when
	finshed using it.
	(c_type_of_child): Likewise.
	(cplus_value_of_child): Isolate the use of name_of_child to
	one case that needs it.
	Release memory for "name" when finished using it.

2001-11-20  Keith Seitz  <keiths@redhat.com>

	* top.c (gdb_init): Call init_ui_hook before initializing
	the default UI.

2001-11-19  Elena Zannoni  <ezannoni@redhat.com>

	* config/powerpc/nm-linux.h (ppc_register_u_addr): Add extern 
        declaration.

2001-11-19  Elena Zannoni  <ezannoni@redhat.com>

	* ppc-linux-nat.c (COPY_REG): Use regcache_collect instead of
	accessing registers[].
	(fill_fpregset): Ditto.

2001-11-19  Elena Zannoni  <ezannoni@redhat.com>

	* infptrace.c (fetch_register): Dynamically allocate buffer for
	register.
	(store_register): Use regcache_collect, instead of accessing the
	register buffer directly.

2001-11-19  Daniel Jacobowitz  <drow@mvista.com>

	* mips-tdep.c (find_proc_desc): Add cur_frame argument.  Pass
	cur_frame to heuristic_proc_desc.
	(heuristic_proc_desc): Add cur_frame argument.  Do not read SP
	if cur_frame == 0.
	(after_prologue): Pass cur_frame == 0 to find_proc_desc.
	(mips_frame_chain): Pass cur_frame == 1 to find_proc_desc.
	(mips_init_extra_frame_info): Likewise.

2001-11-19  Andrew Cagney  <ac131313@redhat.com>

	* defs.h (return_to_top_level): Comment.

Mon Nov 19 14:58:52 2001  Andrew Cagney  <cagney@redhat.com>

	* remote.c (remote_open_1, remote_async_open_1): Use ISO C string
 	concatenation for error parameter.
	(remote_cisco_open): Ditto.

2001-11-19  Keith Seitz  <keiths@redhat.com>

	* varobj.c (c_value_of_child): Use the wrapper function,
	gdb_value_struct_elt.
	(cplus_value_of_child): Likewise.

2001-11-18  Andrew Cagney  <ac131313@redhat.com>
