@@ -1,3 +1,10 @@
+2001-11-21  Kevin Buettner  <kevinb@redhat.com>
+
+	* lin-lwp.c (lin_lwp_attach_lwp): Make sure SIGCHLD is in set of
+	blocked signals.
+
+	* lin-lwp.c (lin_lwp_attach_lwp): Mark main thread as stopped.
+
 2001-11-20  Jim Blandy  <jimb@redhat.com>
 
 	* target.h (TARGET_RANGE_PROFITABLE_FOR_HW_WATCHPOINT): Delete
